--- a/app/src/main/res/layout/film_item.xml
+++ b/app/src/main/res/layout/film_item.xml
@@ -10,8 +10,8 @@
         android:id="@+id/film_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_top"
         android:layout_marginStart="@dimen/margin_start"
+        android:layout_marginTop="@dimen/margin_top"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,6 +27,27 @@
         app:layout_constraintStart_toEndOf="@+id/film_name"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="00:30" />
+
+    <ImageView
+        android:id="@+id/film_poster"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_top"
+        android:contentDescription="@string/film_poster"
+        app:layout_constraintStart_toStartOf="@+id/film_name"
+        app:layout_constraintTop_toBottomOf="@+id/film_name"
+        app:srcCompat="@drawable/ic_baseline_bathtub_24" />
+
+    <TextView
+        android:id="@+id/film_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_start"
+        android:layout_marginTop="@dimen/margin_top"
+        app:layout_constraintStart_toEndOf="@+id/film_poster"
+        app:layout_constraintTop_toBottomOf="@+id/film_name"
+        tools:text="Описание фильма" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
