--- a/app/src/main/res/layout/film_item.xml
+++ b/app/src/main/res/layout/film_item.xml
@@ -44,6 +44,34 @@
             app:layout_constraintStart_toStartOf="@+id/film_poster"
             app:layout_constraintTop_toBottomOf="@+id/film_poster"
             tools:text="Описание фильма" />
+
+        <EditText
+            android:id="@+id/film_note"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_start"
+            android:layout_marginTop="@dimen/margin_top"
+            android:importantForAutofill="no"
+            android:inputType="textMultiLine"
+            android:maxLines="10"
+            android:minLines="2"
+            app:layout_constraintStart_toStartOf="@+id/film_description"
+            app:layout_constraintTop_toBottomOf="@+id/film_description"
+            tools:text="Примечание" />
+
+        <Button
+            android:id="@+id/save_note"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_start"
+            android:layout_marginTop="@dimen/margin_top"
+            android:layout_marginEnd="@dimen/margin_end"
+            android:text="@string/bt_save_film_note_text"
+            app:layout_constraintStart_toStartOf="@+id/film_note"
+            app:layout_constraintTop_toBottomOf="@+id/film_note"
+            tools:text="@string/bt_save_film_note_text" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
