--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,7 @@
     <dimen name="recycler_item_line_margin_end">20dp</dimen>
     <dimen name="margin_end">15dp</dimen>
     <dimen name="film_poster_height">200dp</dimen>
+
+    <dimen name="hairline">1dp</dimen>
+    <dimen name="margin_5_dp">5dp</dimen>
 </resources>
