--- a/app/src/main/res/menu/film_details_screen_menu.xml
+++ b/app/src/main/res/menu/film_details_screen_menu.xml
@@ -12,4 +12,11 @@
         android:icon="@drawable/ic_history"
         android:title="@string/menu_title_history"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/menu_show_contacts"
+        android:icon="@drawable/ic_baseline_contacts_24"
+        android:title="@string/show_contacts"
+        app:showAsAction="ifRoom" />
+
 </menu>
