--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="margin_top">15dp</dimen>
+    <dimen name="margin_top_1dp">1dp</dimen>
     <dimen name="margin_start">15dp</dimen>
 
     <dimen name="fab_icon_size">56dp</dimen>
@@ -17,4 +18,5 @@
     <dimen name="margin_5_dp">5dp</dimen>
     <dimen name="margin_15_dp">15dp</dimen>
     <dimen name="fab_location_icon_size">45dp</dimen>
+    <dimen name="person_profile_height">100dp</dimen>
 </resources>
